Amended og:image

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Xycronic</title>
 <meta property="og:title" content="Xycronic" />
 <link rel="icon" type="image/png" href="img/avatar.png"/>
-<meta property="og:image" content="img/avatar.png" />
+<meta property="og:image" content="https://xycronic.com/img/avatar.png" />
 <meta name="description" content="There's nothing to see here 😉">
 <meta property="og:description" content="There's nothing to see here 😉" />
 <meta name="keywords" content="xycronic">
