--- a/index.html
+++ b/index.html
@@ -1,63 +1,81 @@
 <!DOCTYPE html>
 <html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Xycronic</title>
-<meta property="og:title" content="Xycronic" />
-<link rel="icon" type="image/png" href="img/avatar.png"/>
-<meta property="og:image" content="https://xycronic.com/img/avatar.png" />
-<meta name="description" content="There's nothing to see here 😉">
-<meta property="og:description" content="There's nothing to see here 😉" />
-<meta name="keywords" content="xycronic">
-<meta property="og:type" content="website" />
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:site" content="@xycronic" />
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Xycronic</title>
+    <meta property="og:title" content="Xycronic" />
+    <link rel="icon" type="image/png" href="img/avatar.png"/>
+    <meta property="og:image" content="https://xycronic.com/img/avatar.png" />
+    <meta name="description" content="There's nothing to see here 😉">
+    <meta property="og:description" content="There's nothing to see here 😉" />
+    <meta name="keywords" content="xycronic">
+    <meta property="og:type" content="website" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@xycronic" />
 
-
-<style>
-body, html {
-  height: 100%;
-  margin: 0;
-  display: flex;
-  flex-direction: column;
-  background-color: black;
-  color: white;
-  justify-content: center;
-  font-family: 'Anonymous Pro', monospace;  
-}
-
-p {
-  margin: 0;
-}
-
-/* Google Fonts */
-@import url(https://fonts.googleapis.com/css?family=Anonymous+Pro);
-.line-1{
-    margin: 0 auto;
-    border-right: 2px solid rgba(255,255,255,.75);
-    font-size: 180%;
-    white-space: nowrap;
-    overflow: hidden;   
-}
-
-/* Animation */
-.anim-typewriter{
-  animation: typewriter 3s steps(44) 1s 1 normal both,
-             blinkTextCursor 500ms steps(44) infinite normal;
-}
-@keyframes typewriter{
-  0%{width: 0; white-space: nowrap;}
-  99%{width: 500px; white-space: nowrap;}
-  100% {white-space: normal;}
-}
-@keyframes blinkTextCursor{
-  from{border-right-color: rgba(255,255,255,.75);}
-  to{border-right-color: transparent;}
-}
-
-</style>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+        background-color: #000;
+        color: #fff;
+        font-family: Arial, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+      }
+  
+      .container {
+        text-align: center;
+        padding: 20px;
+      }
+  
+      .avatar {
+        width: 150px;
+        height: 150px;
+        border-radius: 50%;
+        margin-bottom: 20px;
+      }
+  
+      h1 {
+        font-size: 26px;
+        font-weight: bold;
+        margin: 20px 0;
+      }
+  
+      .contact {
+        margin-top: 30px;
+        font-size: 18px;
+        line-height: 1.5;
+      }
+  
+      .discord {
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 10px;
+      }
+  
+      .discord-logo {
+        width: 24px;
+        height: 24px;
+        margin-right: 8px;
+      }
+    </style>
 </head>
 <body>
-  <p class="line-1 anim-typewriter">There's nothing cookin' here :)</p>
+  <div class="container">
+    <img src="https://xycronic.com/img/avatar.png" alt="Xycronic Avatar" class="avatar">
+    <h1>Some of the best websites are the most simple ones.</h1>
+    <div class="contact">
+      <p>Feel free to reach out!</p>
+      <div class="discord">
+        <img src="https://static.vecteezy.com/system/resources/previews/006/892/625/non_2x/discord-logo-icon-editorial-free-vector.jpg" alt="Discord Logo" class="discord-logo">
+        @Xycronic
+      </div>
+    </div>
+  </div>
 </body>
 </html>
